# libmtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  initfini.c  time.c
include/: mtime.h
